system/identity/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oidc
  namespace: identity
spec:
  parentRefs:
    - name: edge
      namespace: edge
      sectionName: https
  hostnames:
    - oidc.cloudlab.kerbaras.com
  rules:
    - matches:
        - path: { type: PathPrefix, value: /.well-known/ }
        - path: { type: PathPrefix, value: /openid/ }
      backendRefs:
        - name: oidc-mirror
          port: 8080
